--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-icons": "^4.8.0",
     "react-parallax-tilt": "^1.7.42",
     "react-pdf": "^5.7.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-tsparticles": "^1.42.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
@@ -45,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "<h2 align=\"center\">\r   Portfolio Website - v2.0<br/>\r   <a href=\"https://soumyajit.vercel.app/\" target=\"_blank\">soumyajit.tech</a>\r </h2>\r <div align=\"center\">\r   <img alt=\"Demo\" src=\"./Images/readme-img1.png\" />\r </div>",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
